fix: prevent right-aligned image from appearing behind table of contents

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1171,7 +1171,7 @@ a.footnote-ref {
   }
 
   figure.right {
-    margin-right: -240px;
+    margin-right: 0;
   }
 
   figure.small {
